# pypelines-integration-demo

./: .pdm-python  README.md  pyproject.toml
demos/: demo.ipynb
src/pypelines_integration_demo/: __init__.py
